# instantc

./: AST.cpp  AST.h  CMakeLists.txt  JasminCodeGen.cpp  JasminCodeGen.h  LLVMCodeGen.cpp  LLVMCodeGen.h  LexStream.cpp  LexStream.h  Lexer.cpp  Lexer.h  Makefile  Parser.cpp  Parser.h  README  Token.h  build.sh  get_dependencies.sh  insc_jvm.cpp  insc_llvm.cpp
Tests/: CMakeLists.txt  JasminCGTests.cpp  LLVMCGTests.cpp  LexerTests.cpp  ParserTests.cpp
examples/: test07.ins
src/: CMakeLists.txt  DefaultVisitor.cpp  DefaultVisitor.h  Diagnostic.cpp  Instant.g4  InstantLexer.cpp  InstantLexer.h  InstantLexer.tokens  InstantListener.cpp  InstantListener.h  InstantParser.cpp  InstantParser.h  InstantVisitor.cpp  InstantVisitor.h  JasminCodeGen.cpp  JasminCodeGen.h  JasminCodeGenVisitor.cpp  JasminCodeGenVisitor.h  JasminVisitor.cpp  JasminVisitor.h  LLVMCodeGen.cpp  LLVMCodeGen.h  LLVMCodeGenVisitor.cpp  LLVMCodeGenVisitor.h  LexStream.h  Lexer.h  Parser.cpp  StackHeightOptimizer.cpp  StackHeightOptimizer.h  StaticAnalysis.cpp  StaticAnalysis.h  Token.h  VariableAllocator.cpp  VariableAllocator.h  common.h  insc_jvm.cpp  insc_llvm.cpp  jvm.cpp  llvm.cpp
